--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Resourses.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Resourses.mxml
@@ -192,7 +192,7 @@
 		<mx:DataGrid id="resourcesDataGrid" color="0x323232" width="100%" height="100%" rowCount="3"   itemEditEnd="{}"
 					 editable="true" >
 			<mx:columns>
-				<mx:DataGridColumn dataField="id" dataTipField="ID" width="200" editable="false" />
+				<mx:DataGridColumn dataField="id" dataTipField="ID" width="200"  />
 				<mx:DataGridColumn dataField="name" dataTipField="Name" width="150" />
 				<mx:DataGridColumn dataField="type" dataTipField="Type" width="100" />
 			</mx:columns>
