--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:NavigatorContent	 xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					 xmlns:s="library://ns.adobe.com/flex/spark" 
-					 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" xmlns:ns="net.vdombox.object_editor.model.*"
+					 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" 
+					 xmlns:ns="net.vdombox.object_editor.model.*"
+					 xmlns:ns2="net.vdombox.object_editor.view.*"
 					 label="Atributes">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
@@ -16,7 +18,15 @@
 					{label:"RichText Editor", data:2}, 
 					{label:"Text Editor", data:3}, 
 					{label:"Picture", data:4}, 
-					{label:"Special Table", data:5}]);			
+					{label:"Special Table", data:5}]);	
+			
+			[Bindable]
+			public var arColorGroup:ArrayCollection = new ArrayCollection(
+				[ 	{label:"Grey", data:1}, 
+					{label:"Red", data:2}, 
+					{label:"Green", data:3}, 
+					{label:"Blue", data:4}, 
+				]);	
 		]]>
 	</fx:Script>
 	<s:HGroup>
@@ -34,39 +44,36 @@
 				<mx:TextInput id="fname" width="250" change="{}"/>
 			</mx:FormItem>
 			
-			<mx:FormItem label="DisplayName" >
-				<s:HGroup>
-					<ns:OETextInput id="fDisplayName" width="213" editable="false"/>
-					<s:Button label="..." width="30" click="{}"/>
-				</s:HGroup>
-			</mx:FormItem>
+			<s:HGroup>
+				<mx:Label text="DisplayName" width="105" toolTip="Отображаемое имя атрибута"/>
+				<ns2:LangTextInput id="DisplayName" width="250"/>
+			</s:HGroup>
 			
-			<mx:FormItem label="DefaultValue" toolTip="Имя объекта">
+			<mx:FormItem label="DefaultValue" toolTip="Значение по умолчанию">
 				<mx:TextInput id="defaultValue" width="250" change="{}"/>
 			</mx:FormItem>
-			
+						
 			<mx:FormItem label="RegExp" >
 				<s:HGroup>
 					<ns:OETextInput id="regExp" width="213" editable="false"/>
 					<s:Button label="..." width="30" click="{}"/>
 				</s:HGroup>
 			</mx:FormItem>
-			<mx:FormItem label="ErrorValidationMessage" >
-				<s:HGroup>
-					<ns:OETextInput id="fErrMessage" width="213" editable="false"/>
-					<s:Button label="..." width="30" click="{}"/>
-				</s:HGroup>
-			</mx:FormItem>
+			
+			<s:HGroup>
+				<mx:Label text="ErrorValidationMessage"	width="140"/>
+				<ns2:LangTextInput id="fErrMessage" width="215"/>
+			</s:HGroup>
+			
 			<mx:FormItem label="Visible" >
 				<s:CheckBox id="visibleAtr" label="Visible atribute"  toolTip="Отображаемый в редакторе" change="{}"/>
 			</mx:FormItem>
 			
-			<mx:FormItem label="Help" >
-				<s:HGroup>
-					<ns:OETextInput id="helpAtr" width="213" editable="false"/>
-					<s:Button label="..." width="30" click="{}"/>
-				</s:HGroup>
-			</mx:FormItem>
+			<s:HGroup>
+				<mx:Label text="Help"	width="105"/>
+				<ns2:LangTextInput id="helpAtr" width="250"/>
+			</s:HGroup>
+			
 			<mx:FormItem label="InterfaceType" >
 				<s:HGroup>
 					<ns:OETextInput id="interfaceType" width="213" editable="false"/>
@@ -85,7 +92,7 @@
 					<ns:OETextInput id="colorgroup" width="213" editable="false"/>
 					<s:Button label="..." width="30" click="{}"/>
 				</s:HGroup>
-			</mx:FormItem>
+			</mx:FormItem>		
 		</mx:Form>		
 	</s:HGroup>
 </s:NavigatorContent>
