git-svn-id: http://svn.vdombox.ru/flextools/trunk@6492 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Events.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Events.mxml
@@ -136,7 +136,7 @@
 				fname.text = parameter.@Name;
 				fOrder.text = parameter.@Order;
 				fVbType.text = parameter.@VbType;
-				fHelp.text = parameter.@Help;
+//				fHelp.text = parameter.@Help;
 			}
 			
 			private function cleareParametr():void
@@ -144,7 +144,7 @@
 				fname.text = "";
 				fOrder.text = "";
 				fVbType.text = "";
-				fHelp.text = "";
+//				fHelp.text = "";
 			}
 			
 			private function getCurentEvent():XML
@@ -188,7 +188,7 @@
 				xmlParameter.@Name = fname.text;
 				xmlParameter.@Order = fOrder.text;
 				xmlParameter.@VbType = fVbType.text;
-				xmlParameter.@Help = fHelp.text;
+//				xmlParameter.@Help = fHelp.text;
 				
 				objParameter["label"] = objParameter["data"] = fname.text;
 				
@@ -254,7 +254,7 @@
 		
 		<mx:FormItem label="Help:" toolTip="Это Help" enabled="false">
 			<s:HGroup>
-				<ns:OETextInput id="fHelp" width="163"  editable="false" />
+				
 				<s:Button label="..." width="30" />
 			</s:HGroup>
 		</mx:FormItem>
