--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:NavigatorContent	 xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					 xmlns:s="library://ns.adobe.com/flex/spark" 
-					 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" 
+					 xmlns:mx="library://ns.adobe.com/flex/mx"  
 					 xmlns:ns="net.vdombox.object_editor.model.*"
 					 xmlns:ns2="net.vdombox.object_editor.view.*"
 					 label="Atributes">
@@ -39,8 +39,10 @@
 		]]>
 	</fx:Script>
 	<s:HGroup>
-		<s:VGroup>
-			<s:List id="attributesList" width="100%" change="this.selIt=List(event.target).selectedItem"/>
+
+		<s:VGroup height="{300}">
+			<s:List id="attributesList" height="{height- 50}" width="100%" change="this.selIt=List(event.target).selectedItem"/>
+
 			<s:HGroup>
 				<s:Button id="addAttributeButton" label="Add"/>
 				<s:Button id="deleteAttributeButton" label="Delete" enabled="{attributesList.selectedIndex != -1}"/>
@@ -64,7 +66,7 @@
 						
 			<mx:FormItem label="RegExp" >
 				<s:HGroup>
-					<ns:OETextInput id="regExp" width="213" editable="false"/>
+					
 					<s:Button label="..." width="30" click="{}" />
 				</s:HGroup>
 			</mx:FormItem>
@@ -83,23 +85,26 @@
 				<ns2:LangTextInput id="helpAtr" width="250"/>
 			</s:HGroup>
 			
+
 			<mx:FormItem label="InterfaceType" 
 						 toolTip="Значения: 1 - Standard, 2 - RichText Editor, 3 - Text Editor, 4 - Picture, 5 - Special Table">
 				<s:ComboBox id="interfaceType" dataProvider="{arInterfaceType}" width="250" change="{saveChanges()}"/>
+
 			</mx:FormItem>
 						
 			<mx:FormItem label="CodeInterface" >
 				<s:HGroup>
-					<ns:OETextInput id="codeInterface" width="213" editable="false"/>
+					
 					<s:Button label="..." width="30" click="{}"/>
 				</s:HGroup>
 			</mx:FormItem>
+
 			
 			<mx:FormItem label="Colorgroup" 
 						 toolTip="Цветовая группа атрибута, значения: 1 - Grey, 2 - Red, 3 - Green, 4 - Blue">
 				<s:ComboBox id="colorgroup" dataProvider="{arColorGroup}" width="250" change="{saveChanges()}"/>
 			</mx:FormItem>
-					
+				
 		</mx:Form>		
 	</s:HGroup>
 </s:NavigatorContent>
