git-svn-id: http://svn.vdombox.ru/flextools/trunk@6495 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/SourceCode.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/SourceCode.mxml
@@ -27,6 +27,7 @@
 			
 			private function saveChange():void
 			{
+				dispatchEvent(new Event(Event.CHANGE));
 //				delete _data[0];
 //				_data.appendChild( XML("<![CDATA[" +  sourceCode.text +"]" +"]" +">"));
 //				delete _data.children()[0];
