--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
@@ -13,7 +13,7 @@
 			import mx.collections.ArrayCollection;
 			
 			[Bindable]
-			public var selIt:Object;
+			public var currentItem:Object;
 			
 			[Bindable]
 			public var arInterfaceType:ArrayCollection = new ArrayCollection(
@@ -31,8 +31,13 @@
 					{label:"Green", data:3}, 
 					{label:"Blue", data:4}, 
 				]);	
-			
+						
 			public function viewChanged():void
+			{				
+				dispatchEvent(new Event( Event.CHANGE ));
+			}
+			
+			public function nameChange():void
 			{
 				dispatchEvent(new Event( Event.CHANGE ));
 			}
@@ -41,7 +46,7 @@
 	<s:HGroup>
 
 		<s:VGroup height="{300}">
-			<s:List id="attributesList" height="{height- 50}" width="100%" change="{selIt=attributesList.selectedItem;}"/>
+			<s:List id="attributesList" height="{height- 50}" width="100%" change="this.currentItem=List(event.target).selectedItem"/>
 
 			<s:HGroup>
 				<s:Button id="addAttributeButton" label="Add"/>
@@ -52,7 +57,7 @@
 			<mx:FormHeading fontSize="10"  label="Enter values into the form." paddingTop="0" />
 			
 			<mx:FormItem label="Name" toolTip="Имя объекта">
-				<mx:TextInput id="fname" width="250" change="{viewChanged()}"/>
+				<mx:TextInput id="fname" width="250" change="{nameChange()}"/>
 			</mx:FormItem>
 			
 			<s:HGroup>
@@ -73,7 +78,8 @@
 			
 			<s:HGroup>
 				<mx:Label text="ErrorValidationMessage"	width="140"  />
-				<ns2:LangTextInput id="fErrMessage" width="200" change="{viewChanged()}"/>
+				<s:TextArea id="fErrMessage" width="200" change="{viewChanged()}"/>
+				<!--ns2:LangTextInput id="fErrMessage" width="200" change="{viewChanged()}"/-->
 			</s:HGroup>
 			
 			<mx:FormItem label="Visible" >
