git-svn-id: http://svn.vdombox.ru/flextools/trunk@6501 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
@@ -87,8 +87,8 @@
 						
 			<mx:FormItem label="RegExp" >
 				<s:HGroup>
-					
-					<s:Button label="..." width="30" click="{}" />
+					<s:TextInput id="regExp" width="250"  change="{viewChanged()}"/>
+					<!--s:Button label="..." width="30" click="{}" /-->
 				</s:HGroup>
 			</mx:FormItem>
 			
@@ -115,8 +115,8 @@
 						
 			<mx:FormItem label="CodeInterface" >
 				<s:HGroup>
-					
-					<s:Button label="..." width="30" click="{}"/>
+					<s:ComboBox id="codeInterface" dataProvider="{arCodeInterface}" width="250" change="{viewChanged()}"/>
+					<!--s:Button label="..." width="30" click="{}"/-->
 				</s:HGroup>
 			</mx:FormItem>
 			
