--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ListItemRenderer.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ListItemRenderer.mxml
@@ -43,7 +43,7 @@
 	</s:layout>
 	
 	<s:HGroup verticalAlign="middle" paddingTop="0" paddingBottom="0"  doubleClickEnabled="true" >
-		<mx:Image  id="image"  width="20" height="20" alpha.hovered=".5" visible="false"/>
+		<mx:Image  id="image"  maxWidth="35" maxHeight="53"  visible="false"/>
 		<s:Label id="txt" text="{data.label}" color.hovered="0x1313cd" color.selected="0x000000" verticalAlign="bottom"/>
 	</s:HGroup>
 	
